Reduce font blurriness issues

--- a/style/modal.css
+++ b/style/modal.css
@@ -24,6 +24,7 @@
   border-radius: 4px;
   overflow-y: auto;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
 @keyframes mmfadeIn {
